--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,15 @@
+    @tailwind base;
+    @tailwind components;
+    @tailwind utilities;
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+          /* A PARTIR DE AQUÍ PUEDES PONER TUS ESTILOS PERSONALIZADOS */
+    
+        body {
+              /* Por ejemplo, tus estilos para el body */
+        }
+    
+          /* Si tienes estilos en capas, van aquí DESPUÉS de las directivas */
+        @layer base {
+            h1 {
+                @apply text-2xl;
+            } }
